--- a/Labs/2425/Week07_Correlation_Lab.Rmd
+++ b/Labs/2425/Week07_Correlation_Lab.Rmd
@@ -12,7 +12,7 @@ runtime: shiny_prerendered
 library(learnr)
 library(tidyverse)
 library(kableExtra)
-library(e1701)
+#library(e1701)
 
 baseColor <- '#4CA384'
 accent1 <- '#9AD079'
