--- a/docs/Labs/Week09_regressionII_Lab.Rmd
+++ b/docs/Labs/Week09_regressionII_Lab.Rmd
@@ -290,11 +290,11 @@ quiz(caption = 'Check Your Results',
               answer('85.68', correct = T),
               message = 'The overall model F-statistic is 85.68.'),
      question("Which of the following interpretations are correct? Please select all that apply.",
-              answer('For every additional hour of sleep a participant gets per week, their well-being score will increase by 0.37, when social support and physical activity are equal to 0', correct=T),
+              answer('For every additional hour of sleep a participant gets per week, their well-being score will increase by 0.37, when social support is held constant and someone gets an average amount of physical activity', correct=T),
               answer("As one's social support score increases by .06 points, their well-being score will increase by 1 point, when sleep and physical activity are held constant."),
-              answer('The interaction between sleep and physical activity explains 36% of the variance in student well-being.'),
+              answer('The interaction between sleep and physical activity explains 37% of the variance in student well-being.'),
               answer('For every additional hour of sleep, the relationship between PhysicalActivity and Wellbeing increases by .03 points on the Wellbeing assessment, while controlling for social support.', correct = T),
-              message = "The overall model, rather than just the interaction, explains 36% of the variance in well-being. As one's social support score increases by 1 point, their well-being score will increase by .06 point, when sleep and physical activity are held constant. The interpretation of the interaction, while a bit convoluted, is accurate. Additionally, the interpretation of sleep's effect on well-being is accurate.",
+              message = "The overall model, rather than just the interaction, explains 37% of the variance in well-being. As one's social support score increases by 1 point, their well-being score will increase by .06 point, when sleep and physical activity are held constant. The interpretation of the interaction, while a bit convoluted, is accurate. Additionally, the interpretation of sleep's effect on well-being is accurate. The beta-coefficient for sleep is the association between sleep and well-being when physical activity is average because physical activity is mean-centered. As social support is not mean-centered and it is not part of the interaction, the beta-coefficient reflects the association between sleep and well-being when it is held constant.",
               random_answer_order = T),
      question('Which of the following is the correct interpretation of the intercept?',
               answer('Someone with 0 hours of sleep and physical activity, and a score of 0 on the social support questionnaire would be expected to have a well-being score of 17.04'),
